--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "next-redux-wrapper": "^4.0.1",
     "next-transpile-modules": "^3.0.2",
     "node-sass": "^4.13.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
     "react": "^16.13.1",
     "react-compound-timer": "^1.1.15",
@@ -76,7 +77,8 @@
     "react-social-kr": "^1.1.9",
     "styled-components": "^5.0.1",
     "styled-jsx": "^3.2.4",
-    "swiper": "^5.3.1"
+    "swiper": "^5.3.1",
+    "tailwindcss": "^1.4.6"
   },
   "devDependencies": {}
 }
