--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
     "react": "^16.13.1",
+    "react-collapse": "^5.0.1",
     "react-compound-timer": "^1.1.15",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
