--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "react-redux": "^7.2.0",
     "react-responsive-modal": "^5.0.2",
     "react-social-kr": "^1.1.9",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.0.1",
     "styled-jsx": "^3.2.4",
     "swiper": "^5.3.1",
