--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "node-sass": "^4.13.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
+    "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-collapse": "^5.0.1",
     "react-compound-timer": "^1.1.15",
@@ -73,9 +74,12 @@
     "react-id-swiper": "^2.4.0",
     "react-infinite-scroll-component": "^5.0.4",
     "react-infinite-scroller": "^1.2.4",
+    "react-markdown": "^4.3.1",
+    "react-notion": "^0.7.3",
     "react-redux": "^7.2.0",
     "react-responsive-modal": "^5.0.2",
     "react-social-kr": "^1.1.9",
+    "react-syntax-highlighter": "^12.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.0.1",
